Able to pull historial daily stock data and put into chart--however chart is not sizing correctly--still too big

--- a/homePage.css
+++ b/homePage.css
@@ -129,8 +129,8 @@ body {
 }
 			
 #myChart{
-    width:30em;
-	height:20em;
+    width:5em;
+	height:2em;
 }
 
 #chartBckgnd{
